k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  type: NodePort
  ports:
    - port: 40001
      targetPort: 31510
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: cr.yandex/crp92ekqp3bdhvvp7ffm/backend-image:latest
          resources:
            requests:
              cpu: "250m"
              memory: 250Mi
            limits:
              cpu: "500m"
              memory: 750Mi
          ports:
            - containerPort: 40001
---
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: front
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
spec:
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: cr.yandex/crp92ekqp3bdhvvp7ffm/frontend-image:latest
          ports:
            - containerPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 40001
---
